# triton-metal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  compile_commands.json  pyproject.toml  setup.py
.cache/clangd/index/: ElementwiseOpToLLVM.cpp.76F6D20AC723AC63.idx  TritonMetalToLLVM.cpp.162DD422E6BB33E7.idx  TritonMetalToLLVM.h.4648D06CC62FF7AA.idx
.github/workflows/: ci.yml  publish.yml
benchmarks/: PERFORMANCE_METRICS.md  bench_all.py  bench_copy_overhead.py  bench_regression.py  mlx_vs_pyobjc.py
docs/: ARCHITECTURE.md  ROADMAP.md  triton-ext-alignment.md
docs/design/: tma-inspired-copy-simdgroup.md
docs/design/prototypes/: baseline_matmul.metal  bench_copysg.py  bench_copysg_sizes.py  copysg_matmul.metal
docs/superpowers/plans/: 2026-04-08-sizePerThread-fix.md  2026-04-13-cpp-mlir-nano-backend.md  2026-04-14-cpp-cooperative-ops.md  2026-04-14-cpp-metallib-expansion.md
docs/superpowers/specs/: 2026-04-14-cpp-cooperative-ops-design.md
examples/: demo.py
reports/: baseline.json  perf_baseline.json  upstream_test_core.json  upstream_test_core.txt
scripts/: bench_compilation.py  check_upstream_regression.py  conftest_metal.py  dump_atomic_ttgir.py  run_upstream_tests.py
tests/: conftest.py  test_autotuner.py  test_cpp_backend.py  test_emitter.py  test_error_handling.py  test_flash_attention.py  test_generic_lowerer.py  test_gpu_correctness.py  test_integration.py  test_mlir_walker.py  test_mlx_backend.py  test_models.py  test_mps_tensor.py  test_stress.py  test_torch_compile.py  test_ttgir_parser.py  test_vector_add.py
triton_metal/: .gitignore  debug.py  errors.py
triton_metal/autotuning/: __init__.py  autotuner.py
triton_metal/backend/: __init__.py  compiler.py  device_detect.py  driver.py
triton_metal/codegen/: _device_func_lowerer.py  _lowerer_control.py  _lowerer_detection.py  _lowerer_emission.py  _lowerer_helpers.py  _lowerer_reduce.py  _lowerer_templates.py  _msl_templates.py  generic_lowerer.py  mlir_walker.py  msl_builtins.py  msl_emitter.py  msl_types.py  ttgir_parser.py
triton_metal/csrc/: CMakeLists.txt  python_bindings.cpp  python_bindings_bridge.cpp
triton_metal/csrc/.cache/clangd/index/: ElementwiseOpToLLVM.cpp.76F6D20AC723AC63.idx  TritonMetalToLLVM.cpp.162DD422E6BB33E7.idx  TritonMetalToLLVM.h.4648D06CC62FF7AA.idx  python_bindings.cpp.828B91CD6A5C5E82.idx
triton_metal/csrc/include/triton_metal/Conversion/: TritonMetalToLLVM.h
triton_metal/csrc/lib/Conversion/: CMakeLists.txt  DotOpToLLVM.cpp  ElementwiseOpToLLVM.cpp  SharedMemoryAliasingPass.cpp  SharedMemoryOpToLLVM.cpp  SharedMemoryVectorizePass.cpp  TritonMetalToLLVM.cpp
triton_metal/inductor/: README.md  __init__.py  metal_libdevice.py
triton_metal/mlx/: __init__.py  mlx_launcher.py  msl_extractor.py
triton_metal/profiling/: metal_bench.py
