[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-metal"
version = "0.1.0"
description = "Metal (Apple Silicon) backend for Triton"
requires-python = ">=3.10"
dependencies = [
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Metal>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-MetalPerformanceShaders>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
triton = [
    "triton>=3.2.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
